--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+h1 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header {
+  /* min-height: 100vh; */
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding-left: 50px;
+  padding-bottom: -50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header2 {
+  font-size: 20px;
+  color: white;
+  padding-left: 50px;
+  margin-bottom: 0;
+  padding: 0;
+  line-height: 0px;
+}
+
+.tag-line {
+  font-size: 20px;
+  color: white;
+  line-height: 0px;
+}
+
+.topnav {
+  background-color: grey;
+  overflow: hidden;
+}
+.topnav-locked-out {
+  background-color: #333;
+  overflow: hidden;
+  color: black;
+  padding: 14px 16px;
+  background-color: white;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: white;
+  color: black;
+}
+
+.login-form {
+  /* Center the form on the page */
+  width: 400px;
+  /* Form outline */
+  padding: 5%;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  background-color: grey;
+  margin: auto;
+  margin-top: 10%;
+}
+
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: x-large;
 }
